[gd_scene load_steps=9 format=2]

[ext_resource path="res://SignLanguage.gd" type="Script" id=1]
[ext_resource path="res://HandsAtlas.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://HumanFigure.png" type="Texture" id=4]
[ext_resource path="res://HandsSelector.png" type="Texture" id=5]
[ext_resource path="res://Character3D.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 260.0
margin_top = 68.0
margin_right = 294.0
margin_bottom = 74.0
rect_scale = Vector2( 3, 3 )
text = "->"

[node name="HumanFigure" type="Sprite" parent="."]
visible = false
position = Vector2( 636, 385 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="HandSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 503, 240 )
texture = SubResource( 2 )
offset = Vector2( 5, -35 )

[node name="HandPreviousPosition" type="Sprite" parent="."]
modulate = Color( 0.00784314, 0, 1, 0.203922 )
position = Vector2( 163, 220 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="HandCurrentPosition" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 136, 306 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="ConfigurationBackground" type="Sprite" parent="."]
position = Vector2( 284.465, 549.449 )
scale = Vector2( 0.872773, 1.00468 )
texture = ExtResource( 5 )

[node name="ConfigurationArea" type="Area2D" parent="."]
position = Vector2( 285.465, 549.449 )
scale = Vector2( 6.71099, 3.09313 )

[node name="ConfigurationCollisionShape2D" type="CollisionShape2D" parent="ConfigurationArea"]
shape = SubResource( 1 )

[node name="PositionBackground" type="Sprite" parent="."]
visible = false
position = Vector2( 953.6, 664 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="PositionArea" type="Area2D" parent="."]
visible = false
position = Vector2( 978.216, 487.016 )
scale = Vector2( 7, 6 )

[node name="PositionCollisionShape2D" type="CollisionShape2D" parent="PositionArea"]
position = Vector2( 1.52588e-05, 0 )
shape = SubResource( 1 )

[node name="Character" parent="." instance=ExtResource( 6 )]

[connection signal="input_event" from="ConfigurationArea" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="PositionArea" to="." method="_on_Area2D_input_event_b"]
